# inrof_sim

./: .gitignore  CMakeLists.txt  package.xml
config/: pursuit_params.yaml  swerve_params.yaml
include/inrof_sim/: mppi_library.hpp  mppi_swerve.hpp  pursuit.hpp  swerve_pose.hpp  swerve_vel_converter.hpp
launch/: inrof_field.launch.py  joy_move.launch.py  mppi_brushup.launch.py  pusuit.launch.py  swerve.launch.py
models/: daisha.sdf
models/daisha/: model.config  model.sdf
models/meshs/: daisha.sdf
models/swerve/: model.config  model.sdf
models/swerve/meshs/: swerve_base.stl  swerve_stare.stl  swerve_wheel.stl
plugins/: CMakeLists.txt  CmakeLists.txt  omni_plugin.cc
src/: mppi_library.cpp  mppi_swerve.cpp  omni_control.cpp  pose_converter.cpp  pursuit.cpp  swerve_pose.cpp  swerve_vel_converter.cpp  twist_convert.cpp
worlds/: inrof_field.sdf  mppi_brush.sdf  swerve_world.sdf
worlds/meshs/: nhk_field.dae  nhk_field.stl
